tests/parsing/errors/structure/letBinding.js
// missing =
let rightResource ur.resources.find(
  r => r.account_id === connection.left.account.id
)

let x = {
  // missing =
  let field p->parseFieldDeclaration 
  field
}

let t = {
	// missing =
	let /_, _, token/ scanner->scan
  token
}

let keyTable: Belt.Map.String.t<int> =

let foo = 
